roles/traefik/files/templates/namespace.yaml
#@ load("@ytt:data", "data")
#@ if data.values.traefik.create_namespace:
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.traefik.namespace
#@ end
