roles/traefik/files/templates/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-dashboard
  namespace: #@ data.values.traefik.namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: #@ "Host(`{}`)".format(data.values.traefik.dashboard.hostname)
      kind: Rule
      middlewares:
      - name: auth
      services:
      - name: api@internal
        kind: TraefikService
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: #@ data.values.traefik.namespace
spec:
  basicAuth:
    secret: authsecret
#@ for app in data.values.traefik.ingress:
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: #@ "traefik-tls-{}".format(app.name)
  namespace: #@ app.namespace
spec:
  entryPoints:
    - websecure
  routes:
    - match: #@ "Host(`{}`)".format(app.uri)
      kind: Rule
      services:
      - name: #@ app.service_name
        port: #@ app.service_port
        namespace: #@ app.namespace
  tls: {}
#@ end
